--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,98 +1,206 @@
-
-:root{
-    --dark:#13293d;
+:root {
+    --dark: #13293d;
 
 }
-body{
+
+body {
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
-  
+
 
 }
-header{
-    display:flex;
+
+header {
+    display: flex;
     flex-wrap: wrap;
     padding: 15px;
     text-align: center;
-    background-color:var(--dark);
+    background-color: var(--dark);
     width: 100%;
     height: 110px;
-    justify-content:left;
+    justify-content: left;
     color: #fff;
-    
+
 }
-.photo{
-    
+
+.photo {
+
     margin-top: 0px;
     padding: 30px;
     width: 100px;
-    height:80px;
+    height: 80px;
     border: 2px solid#fff;
     border-radius: 100px;
     background-image: url(../images/jadon.JPG);
     background-size: cover;
 
 }
-nav{
-   display: flex;
-   justify-content:right; 
+
+nav {
+    display: flex;
+    justify-content: right;
 
 }
-nav a{
+
+nav a {
     padding: 10px 35px;
     font-size: 30px;
     text-decoration: none;
     border-bottom: 2px solid var(--dark);
     border-radius: 20px;
 }
-.Wel{
+
+.Wel {
     padding: 20px;
     margin-left: 80px;
     font-size: 60px;
 }
-nav a:hover{
+
+nav a:hover {
     background-color: #13293d;
     color: #fff;
 }
-.About-Me{
-    height: 200px;
-    border-bottom: 2px solid var(--dark);
+
+main {
+    height: 95%;
+    width: 100%;
 }
-.About-me-title{
-    padding: 20PX;
-    margin-top: 40PX;
-    width: 200px;
+
+.About-Me {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+
     height: 200px;
+}
+
+.About-me-content {
+    float: right;
+    padding: 20px;
+    margin-left: 5px;
+
+    width: 89%;
+    border: 2px solid var(--dark);
+}
+
+.About-me-title {
+    text-align: right;
+    font-size: 40px;
+    font-style: oblique;
+    float: left;
+    padding: 20px;
+    width: 150px;
+
     border-right: 2px solid var(--dark);
 }
+
+.Work {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+
+    height: 300px;
+}
+
+.Work-content {
+    float: right;
+    padding: 20px;
+    margin-left: 5px;
+
+    width: 89%;
+    border: 2px solid var(--dark);
+}
+
+.Work-title {
+    font-size: 40px;
+    font-style: oblique;
+    float: left;
+    padding: 20px;
+    width: 150px;
+
+    border-right: 2px solid var(--dark);
+}
+
+.Contact-Me {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+
+    height: 20px;
+}
+
+.Contact-me-content {
+    float: right;
+    padding: 20px;
+    margin-left: 5px;
+
+    width: 89%;
+    border: 2px solid var(--dark);
+}
+
+.Contact-me-title {
+    text-align: right;
+    font-size: 40px;
+    font-style: oblique;
+    float: left;
+
+    width: 150px;
+
+    border-right: 2px solid var(--dark);
+}
+
+footer {
+    margin-top: 50px;
+
+    height: 5%;
+    padding: 20px;
+    width: 100%;
+    background-color: var(--dark);
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:xx-large;
+    text-align: center;
+}
+
 @media screen and (max-width:1400px) {
-    .Wel{
+    .Wel {
         font-size: 50px;
     }
-    
+
+    .About-Me {
+        flex-direction: column;
+
+    }
+
 }
+
 @media screen and (max-width:1200px) {
-    .Wel{
+    .Wel {
         font-size: 30px;
     }
-    
+
 }
+
 @media screen and (max-width:992px) {
+
     main,
     nav {
-      flex-direction: column;
+        flex-direction: column;
     }
-    .Wel{
+
+    .Wel {
         font-size: 24px;
     }
-  }
-  @media screen and (max-width:762px) {
+}
+
+@media screen and (max-width:762px) {
+
     main,
     nav {
-      flex-direction: column;
+        flex-direction: column;
     }
-    .Wel{
+
+    .Wel {
         font-size: 12px;
     }
-  }
-  
+}
