--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@
 body {
     margin: 0;
     font-family: 'Times New Roman', Times, serif;
+   
 
 
 }
@@ -69,8 +70,10 @@ main {
 .About-Me {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     margin-top: 10px;
-
+    margin-left: 0px;
+    width: 100%;
     height: 200px;
 }
 
@@ -85,22 +88,26 @@ main {
 
 .About-me-title {
     text-align: right;
-    font-size: 40px;
+    font-size: 30px;
     font-style: oblique;
     float: left;
     padding: 20px;
     width: 150px;
-
+    height: 180px;
     border-right: 2px solid var(--dark);
 }
 
 .Work {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     margin-top: 10px;
-
-    height: 300px;
+    margin-left: 0px;
+    width: 100%;
+    height: 200px;
 }
+    
+
 
 .Work-content {
     float: right;
@@ -112,21 +119,24 @@ main {
 }
 
 .Work-title {
-    font-size: 40px;
+    text-align: right;
+    font-size: 30px;
     font-style: oblique;
     float: left;
     padding: 20px;
     width: 150px;
-
+    height: 180px;
     border-right: 2px solid var(--dark);
 }
 
 .Contact-Me {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     margin-top: 10px;
-
-    height: 20px;
+    margin-left: 0px;
+    width: 100%;
+    height: 200px;
 }
 
 .Contact-me-content {
@@ -140,13 +150,14 @@ main {
 
 .Contact-me-title {
     text-align: right;
-    font-size: 40px;
+    font-size: 30px;
     font-style: oblique;
     float: left;
-
+    padding: 20px;
     width: 150px;
-
+    height: 180px;
     border-right: 2px solid var(--dark);
+   
 }
 
 footer {
@@ -161,16 +172,18 @@ footer {
     font-size:xx-large;
     text-align: center;
 }
-
+p{
+    text-align:justify;
+    text-size-adjust: 10%;
+}
 @media screen and (max-width:1400px) {
     .Wel {
         font-size: 50px;
     }
 
-    .About-Me {
-        flex-direction: column;
+    
+    
 
-    }
 
 }
 
@@ -178,7 +191,7 @@ footer {
     .Wel {
         font-size: 30px;
     }
-
+   
 }
 
 @media screen and (max-width:992px) {
@@ -191,6 +204,18 @@ footer {
     .Wel {
         font-size: 24px;
     }
+    .About-Me, .Work, .Contact-Me {
+        flex-direction: column;
+      height: auto;
+
+    }
+    .About-me-title,.Contact-me-title,.Work-title{
+        width: 100%;
+        height: auto;
+        text-align: left;
+        border-style: none;
+    }
+
 }
 
 @media screen and (max-width:762px) {
@@ -203,4 +228,16 @@ footer {
     .Wel {
         font-size: 12px;
     }
+    .About-Me, .Work, .Contact-Me {
+        flex-direction: column;
+      height: auto;
+
+    }
+    .About-me-title,.Contact-me-title,.Work-title{
+        width: 100%;
+        height: auto;
+        text-align: left;
+        border-style: none;
+    }
+
 }
