--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,7 @@ body {
 
 }
 
-header {
+.header {
     display: flex;
     flex-wrap: wrap;
     padding: 15px;
@@ -104,20 +104,71 @@ main {
     margin-top: 10px;
     margin-left: 0px;
     width: 100%;
-    height: 200px;
+    height: 400px;
 }
     
 
-
 .Work-content {
+  
     float: right;
     padding: 20px;
     margin-left: 5px;
-
+    height: 400px;
     width: 89%;
     border: 2px solid var(--dark);
 }
+.experience{
+    width: 100%;
+    height: 100px;
+    border: 2px solid var(--dark);
+    background-image: url(../images/ustate.jpg);
+    background-size: cover;
+}
+.works{
+    font-size: 20px;
+    text-align: center;
+    font-weight: bold;
+}
+.experience2{
+    width: 100%;
+    height: 300px;
+    
 
+}
+.content a{
+    float: left;
+    text-decoration: none;
+    font-family:Arial;
+    margin-top: 10px;
+    padding: 20px;
+    border: 4px solid var(--dark);
+    border-radius: 20px;
+    
+}
+.content p{
+    float: right;
+    margin-top: 20px;
+    background-color: aqua;
+    
+    font-size: 20px;
+}
+
+.previousworks{
+    float: left;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 10px;
+  padding: 10px;
+  margin-top: 10px;
+  height: 120px;
+  width: 50%;
+  
+  
+}
+img{
+    width: 100%;
+    height: 100px;
+}
 .Work-title {
     text-align: right;
     font-size: 30px;
@@ -125,7 +176,7 @@ main {
     float: left;
     padding: 20px;
     width: 150px;
-    height: 180px;
+    height:400px;
     border-right: 2px solid var(--dark);
 }
 
@@ -136,16 +187,26 @@ main {
     margin-top: 10px;
     margin-left: 0px;
     width: 100%;
-    height: 200px;
+    height: 50px;
 }
 
 .Contact-me-content {
+    display: flex;
     float: right;
     padding: 20px;
     margin-left: 5px;
-
+    height: 50px;
     width: 89%;
     border: 2px solid var(--dark);
+    text-align: center;
+    justify-content: space-between;
+    
+}
+span{
+    text-decoration: underline;
+    font-size: 20px;
+  text-align: center;
+    
 }
 
 .Contact-me-title {
@@ -153,9 +214,9 @@ main {
     font-size: 30px;
     font-style: oblique;
     float: left;
-    padding: 20px;
+    
     width: 150px;
-    height: 180px;
+    height: 50px;
     border-right: 2px solid var(--dark);
    
 }
@@ -175,6 +236,9 @@ footer {
 p{
     text-align:justify;
     text-size-adjust: 10%;
+}
+ul{
+    list-style-type: square;
 }
 @media screen and (max-width:1400px) {
     .Wel {
