--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -104,20 +104,22 @@ main {
     margin-top: 10px;
     margin-left: 0px;
     width: 100%;
-    height: 400px;
+    height: 500px;
 }
     
 
 .Work-content {
-  
+    display: flex;
+  flex-wrap: wrap;
     float: right;
     padding: 20px;
     margin-left: 5px;
-    height: 400px;
+    height: 500px;
     width: 89%;
     border: 2px solid var(--dark);
 }
 .experience{
+    margin-top: 5px;
     width: 100%;
     height: 100px;
     border: 2px solid var(--dark);
@@ -130,6 +132,7 @@ main {
     font-weight: bold;
 }
 .experience2{
+    display: flex;
     width: 100%;
     height: 300px;
     
@@ -154,18 +157,41 @@ main {
 }
 
 .previousworks{
-    float: left;
+  display: flex;
+  justify-content: center;
+  float:inline-end;
   border-style: solid;
   border-width: 1px;
   border-radius: 10px;
-  padding: 10px;
+  padding: 30px;
   margin-top: 10px;
-  height: 120px;
+  flex-direction: column;
+  height: 155px;
   width: 50%;
-  
+  align-items: center;
   
 }
+.previousworks header a{
+    text-decoration:solid;
+    font-family:Arial; 
+    font-size: 20;
+    color: #fff;
+}
+button{
+    border: 1px solid var(--dark);
+    border-radius: 20px;
+    height: 40px;
+    
+    background-color: var(--dark);
+}
+.previousworks header{
+    margin-top: 10px;
+    text-wrap: wrap;
+    width: 300px;
+}
 img{
+   
+   
     width: 100%;
     height: 100px;
 }
@@ -176,7 +202,7 @@ img{
     float: left;
     padding: 20px;
     width: 150px;
-    height:400px;
+    height:500px;
     border-right: 2px solid var(--dark);
 }
 
@@ -244,11 +270,6 @@ ul{
     .Wel {
         font-size: 50px;
     }
-
-    
-    
-
-
 }
 
 @media screen and (max-width:1200px) {
